--- a/index.html
+++ b/index.html
@@ -1615,19 +1615,173 @@
             // --- Capacidades ---
             {
                 id: "cap-01",
-                nome: "Escola de Líderes do Futuro",
-                desafio: "Capacidades",
-                maturidade: "Em Expansão",
-                descricao: "Formação focada em jovens associados para sucessão e governança.",
-                detalhes: "Trilha de 12 meses focada em gestão, cooperativismo e inovação digital para preparar a próxima geração de conselheiros."
+                nome: "Avaliações de desempenho no Castlight",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Avaliação contínua de performance dos colaboradores.",
+                detalhes: "Ferramenta Castlight utilizada para realizar avaliações de desempenho, permitindo acompanhamento estruturado e alinhamento com objetivos estratégicos."
             },
+
             {
                 id: "cap-02",
-                nome: "Letramento Digital 60+",
-                desafio: "Capacidades",
+                nome: "Feedback no Castlight referente às competências",
+                desafio: "Desenvolvimento de Capacidades",
                 maturidade: "Consolidado",
-                descricao: "Workshops para inclusão digital de associados seniores.",
-                detalhes: "Aulas práticas nas agências ensinando o uso do Internet Banking, segurança digital e prevenção contra golpes."
+                descricao: "Feedback estruturado sobre competências.",
+                detalhes: "Processo de feedback realizado na plataforma Castlight, com foco no desenvolvimento das competências essenciais para a evolução profissional."
+            },
+
+            {
+                id: "cap-03",
+                nome: "Ciclo de objetivos e metas relacionados às aspirações estratégicas",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Definição e acompanhamento de metas estratégicas.",
+                detalhes: "Estrutura de ciclo que conecta objetivos individuais e coletivos às aspirações estratégicas da cooperativa, garantindo alinhamento e foco nos resultados."
+            },
+
+            {
+                id: "cap-04",
+                nome: "De olho no objetivo na Pauta do Gestor",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Monitoramento de metas em reuniões de gestão.",
+                detalhes: "Prática que insere o acompanhamento dos objetivos na pauta das reuniões de gestores, reforçando a cultura de resultados e desenvolvimento contínuo."
+            },
+
+            {
+                id: "cap-05",
+                nome: "Política de Gestão de Desempenho",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para avaliação e desenvolvimento.",
+                detalhes: "Documento que estabelece princípios e práticas para gestão de desempenho, garantindo equidade, transparência e evolução profissional."
+            },
+
+            {
+                id: "cap-06",
+                nome: "Política de Educação",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para formação e capacitação.",
+                detalhes: "Política que orienta investimentos e práticas educacionais, assegurando desenvolvimento contínuo e alinhamento às estratégias da cooperativa."
+            },
+
+            {
+                id: "cap-07",
+                nome: "Gestão participativa das ligas",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Engajamento em grupos temáticos.",
+                detalhes: "Modelo de gestão colaborativa em ligas temáticas, promovendo troca de conhecimento, inovação e participação ativa dos colaboradores."
+            },
+
+            {
+                id: "cap-08",
+                nome: "Programa de Ideias",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Fomento à inovação interna.",
+                detalhes: "Iniciativa que incentiva colaboradores a propor ideias inovadoras, fortalecendo a cultura de melhoria contínua e criatividade."
+            },
+
+            {
+                id: "cap-09",
+                nome: "Viagens internacionais",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Experiências globais para aprendizado.",
+                detalhes: "Oportunidades de viagens internacionais para colaboradores, visando ampliar visão estratégica, networking e absorção de boas práticas globais."
+            },
+
+            {
+                id: "cap-10",
+                nome: "Inspirar",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Programa de desenvolvimento e engajamento.",
+                detalhes: "Iniciativa voltada para inspirar colaboradores, com conteúdos e ações que estimulam evolução pessoal e profissional."
+            },
+
+            {
+                id: "cap-11",
+                nome: "Workshop Copilot",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Capacitação sobre uso de IA no trabalho.",
+                detalhes: "Treinamento prático para utilização do Copilot, promovendo eficiência e inovação no dia a dia dos colaboradores."
+            },
+
+            {
+                id: "cap-12",
+                nome: "Dash uso do BI na cooperativa",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Monitoramento do uso de Business Intelligence.",
+                detalhes: "Dashboard que acompanha a utilização de ferramentas de BI, incentivando a tomada de decisão baseada em dados."
+            },
+
+            {
+                id: "cap-13",
+                nome: "Módulo Inspirar #GentequeEvolui",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Conteúdo para evolução contínua.",
+                detalhes: "Módulo do programa Inspirar com foco em desenvolvimento pessoal e profissional, reforçando a cultura de aprendizado."
+            },
+
+            {
+                id: "cap-14",
+                nome: "Trilha sistêmica de Inovação",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Formação estruturada em inovação.",
+                detalhes: "Trilha de aprendizagem que aborda conceitos, ferramentas e práticas de inovação, preparando colaboradores para desafios futuros."
+            },
+
+            {
+                id: "cap-15",
+                nome: "Formação Copilot",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Capacitação para uso avançado do Copilot.",
+                detalhes: "Treinamento aprofundado sobre funcionalidades do Copilot, promovendo maior produtividade e integração tecnológica."
+            },
+
+            {
+                id: "cap-16",
+                nome: "Participação de colaboradores no South Summit",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Imersão em evento global de inovação.",
+                detalhes: "Participação no South Summit para absorção de tendências, networking e estímulo à cultura de inovação dentro da cooperativa."
+            },
+
+            {
+                id: "cap-17",
+                nome: "Cursos do Sicredi Aprende sobre práticas sustentáveis",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Capacitação em sustentabilidade.",
+                detalhes: "Cursos oferecidos pelo Sicredi Aprende que abordam práticas sustentáveis alinhadas aos objetivos estratégicos da cooperativa."
+            },
+
+            {
+                id: "cap-18",
+                nome: "Guia ESG do Sicredi (Sistêmico)",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Referência para práticas sustentáveis.",
+                detalhes: "Documento sistêmico que orienta sobre práticas ESG, reforçando compromisso com responsabilidade social, ambiental e governança."
+            },
+            
+            {
+                id: "cap-19",
+                nome: "Guia de Boas Práticas ESG (Local)",
+                desafio: "Desenvolvimento de Capacidades",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes locais para ESG.",
+                detalhes: "Guia adaptado à realidade local que orienta sobre boas práticas de sustentabilidade e governança, fortalecendo a atuação responsável."
             },
 
             // --- ESG ---
@@ -1829,6 +1983,7 @@
     </script>
 </body>
 </html>
+
 
 
 
