--- a/index.html
+++ b/index.html
@@ -1785,21 +1785,317 @@
             },
 
             // --- ESG ---
-            {
+             {
                 id: "esg-01",
-                nome: "Agência Carbono Zero",
+                nome: "Energia renovável (energia Solar RenovaEco)",
                 desafio: "ESG",
-                maturidade: "Em Expansão",
-                descricao: "Projeto para neutralizar 100% das emissões das agências físicas.",
-                detalhes: "Instalação de painéis solares e compra de créditos de carbono de projetos de reflorestamento local para compensar o consumo."
+                maturidade: "Consolidado",
+                descricao: "Uso de energia limpa e sustentável.",
+                detalhes: "Implantação de energia solar por meio do programa RenovaEco, reduzindo impactos ambientais e promovendo eficiência energética."
             },
             {
                 id: "esg-02",
-                nome: "Relatório de Impacto Transparente",
+                nome: "Gás ecológico nos climatizadores",
                 desafio: "ESG",
                 maturidade: "Consolidado",
-                descricao: "Dashboard em tempo real sobre o impacto social da cooperativa.",
-                detalhes: "Plataforma aberta onde qualquer pessoa pode ver, em tempo real, quanto a cooperativa investiu na comunidade e os resultados gerados."
+                descricao: "Tecnologia sustentável nos sistemas de climatização.",
+                detalhes: "Substituição de gases tradicionais por gases ecológicos nos climatizadores, diminuindo emissões nocivas e alinhando-se às práticas ambientais."
+            },
+            {
+                id: "esg-03",
+                nome: "Projetos para neutralização das emissões calculadas em 2023 e projetadas para 2024",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Compensação das emissões de carbono.",
+                detalhes: "Desenvolvimento de projetos para neutralizar emissões de gases de efeito estufa, garantindo compromisso com metas ambientais."
+            },
+            {
+                id: "esg-04",
+                nome: "Rede Brasil do Pacto",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Adesão a iniciativas globais de sustentabilidade.",
+                detalhes: "Participação na Rede Brasil do Pacto Global, reforçando compromisso com práticas responsáveis e alinhamento aos Objetivos de Desenvolvimento Sustentável (ODS)."
+            },
+            {
+                id: "esg-05",
+                nome: "Relatório de Sustentabilidade",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Transparência em práticas ESG.",
+                detalhes: "Documento que apresenta resultados e ações sustentáveis, garantindo prestação de contas aos associados e sociedade."
+            },
+            {
+                id: "esg-06",
+                nome: "Alinhamento da estratégia com frameworks globais reconhecidos de ESG",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Estratégia baseada em padrões internacionais.",
+                detalhes: "Integração das práticas ESG aos frameworks globais, assegurando conformidade e credibilidade nas ações sustentáveis."
+            },
+            {
+                id: "esg-07",
+                nome: "Programa Propriedade Sustentável",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Fomento à sustentabilidade no campo.",
+                detalhes: "Programa que incentiva práticas sustentáveis nas propriedades rurais, promovendo equilíbrio ambiental e produtividade."
+            },
+            {
+                id: "esg-08",
+                nome: "ASA – Ambiente Saudável do Agro",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Promoção de boas práticas ambientais no agro.",
+                detalhes: "Iniciativa voltada para garantir ambientes saudáveis e sustentáveis no setor agropecuário."
+            },
+            {
+                id: "esg-09",
+                nome: "GERE – Geração de Resultados",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Gestão eficiente e sustentável.",
+                detalhes: "Programa que integra práticas de gestão com foco em resultados e sustentabilidade no agronegócio."
+            },
+            {
+                id: "esg-10",
+                nome: "Agro em Foco",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Capacitação sobre práticas sustentáveis no agro.",
+                detalhes: "Formação voltada para inovação e sustentabilidade no setor agropecuário."
+            },
+            {
+                id: "esg-11",
+                nome: "Empresa Rural",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Capacitação para gestão sustentável.",
+                detalhes: "Programa que desenvolve competências para gestão eficiente e sustentável das propriedades rurais."
+            },
+            {
+                id: "esg-12",
+                nome: "Ações do Dia C",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Mobilização social cooperativista.",
+                detalhes: "Atividades voluntárias que reforçam os princípios cooperativistas e contribuem para o desenvolvimento sustentável das comunidades."
+            },
+            {
+                id: "esg-13",
+                nome: "Apoio ao projeto PISA (Produção Integrada de Sistemas Agropecuários)",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Integração sustentável na produção agropecuária.",
+                detalhes: "Projeto que promove práticas integradas e sustentáveis na produção agropecuária, garantindo equilíbrio ambiental."
+            },
+            {
+                id: "esg-14",
+                nome: "Trilhas no Sicredi Aprende voltadas à Educação Ambiental",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Capacitação em práticas ambientais.",
+                detalhes: "Cursos e trilhas educacionais que abordam temas de sustentabilidade e preservação ambiental."
+            },
+            {
+                id: "esg-15",
+                nome: "Maior parte do quadro de colaboradores é composto por mulheres",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diversidade de gênero na equipe.",
+                detalhes: "Presença significativa de mulheres no quadro de colaboradores, reforçando compromisso com diversidade e inclusão."
+            },
+            {
+                id: "esg-16",
+                nome: "Cargos de liderança ocupados por mulheres",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Representatividade feminina em posições estratégicas.",
+                detalhes: "Mulheres ocupam cargos de liderança, garantindo equidade e diversidade na gestão."
+            },
+            {
+                id: "esg-17",
+                nome: "Código de Conduta Sistêmico",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes éticas para atuação.",
+                detalhes: "Documento que estabelece princípios éticos e condutas esperadas, reforçando integridade e responsabilidade."
+            },
+            {
+                id: "esg-18",
+                nome: "Canal de Denúncias",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Ferramenta para reporte seguro.",
+                detalhes: "Canal confidencial para denúncias, garantindo transparência e combate a práticas inadequadas."
+            },
+            {
+                id: "esg-19",
+                nome: "Formação online obrigatória sobre Inclusão, Pessoa e Respeito",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Capacitação sobre diversidade e respeito.",
+                detalhes: "Treinamento obrigatório que aborda inclusão, diversidade e respeito, fortalecendo cultura organizacional ética."
+            },
+            {
+                id: "esg-20",
+                nome: "Momentos sobre o tema, como na SIPAT",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Eventos para conscientização.",
+                detalhes: "Ações e palestras realizadas em eventos como a SIPAT, reforçando temas de inclusão e respeito."
+            },
+            {
+                id: "esg-21",
+                nome: "Comitê de Inclusão, Diversidade e Equidade",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Grupo estratégico para diversidade.",
+                detalhes: "Comitê responsável por promover políticas e ações voltadas à inclusão e equidade dentro da cooperativa."
+            },
+            {
+                id: "esg-22",
+                nome: "Consultoria especializada sobre o tema com times estratégicos",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Apoio técnico para diversidade.",
+                detalhes: "Consultoria especializada para orientar práticas inclusivas e estratégias de diversidade."
+            },
+            {
+                id: "esg-23",
+                nome: "Censo de diversidade",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Mapeamento da diversidade interna.",
+                detalhes: "Levantamento de dados sobre diversidade para embasar políticas e ações inclusivas."
+            },
+            {
+                id: "esg-24",
+                nome: "Regulamento do Comitê de Inclusão, Diversidade e Equidade",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Normas para atuação do comitê.",
+                detalhes: "Documento que define diretrizes e responsabilidades do comitê, garantindo governança e efetividade."
+            },
+            {
+                id: "esg-25",
+                nome: "Dia da Família",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Evento para integração social.",
+                detalhes: "Ação voltada para fortalecer vínculos familiares e promover bem-estar entre colaboradores."
+            },
+            {
+                id: "esg-26",
+                nome: "Norma de Risco Operacional e Controles Internos",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para gestão de riscos.",
+                detalhes: "Norma que estabelece práticas para mitigação de riscos operacionais e fortalecimento dos controles internos."
+            },
+            {
+                id: "esg-27",
+                nome: "Plano de Riscos",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Planejamento para mitigação de riscos.",
+                detalhes: "Documento que define estratégias e ações para gerenciamento de riscos corporativos."
+            },
+            {
+                id: "esg-28",
+                nome: "Código de Conduta",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Princípios éticos para atuação.",
+                detalhes: "Documento que orienta condutas e reforça compromisso com integridade e responsabilidade."
+            },
+            {
+                id: "esg-29",
+                nome: "Norma de Consequências",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para aplicação de sanções.",
+                detalhes: "Norma que define consequências para descumprimento de regras e condutas, garantindo justiça e transparência."
+            },
+            {
+                id: "esg-30",
+                nome: "Norma de Segurança Cibernética",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Proteção contra ameaças digitais.",
+                detalhes: "Norma que estabelece práticas para segurança cibernética, prevenindo riscos e garantindo integridade dos dados."
+            },
+            {
+                id: "esg-31",
+                nome: "Política de Segurança da Informação e Segurança Cibernética",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para proteção da informação.",
+                detalhes: "Política que orienta práticas para garantir segurança da informação e proteção contra ataques cibernéticos."
+            },
+            {
+                id: "esg-32",
+                nome: "Inventário de Sistemas",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Controle dos ativos tecnológicos.",
+                detalhes: "Levantamento e gestão dos sistemas utilizados, assegurando governança e segurança."
+            },
+            {
+                id: "esg-33",
+                nome: "Power BI de Controles Críticos",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Monitoramento de controles internos.",
+                detalhes: "Dashboard em Power BI para acompanhamento dos controles críticos, garantindo transparência e gestão eficiente."
+            },
+            {
+                id: "esg-34",
+                nome: "Divulgação das demonstrações contábeis e financeiras",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Transparência financeira.",
+                detalhes: "Publicação das demonstrações contábeis e financeiras, reforçando governança e prestação de contas."
+            },
+            {
+                id: "esg-35",
+                nome: "Norma de Compras e Contratação de Serviços",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para aquisições responsáveis.",
+                detalhes: "Norma que orienta processos de compras e contratação, garantindo conformidade e ética."
+            },
+            {
+                id: "esg-36",
+                nome: "Ligas Táticas",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Grupos para execução estratégica.",
+                detalhes: "Ligas que atuam em temas específicos para garantir implementação de práticas e projetos estratégicos."
+            },
+            {
+                id: "esg-37",
+                nome: "PDLE",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Programa de desenvolvimento de lideranças.",
+                detalhes: "Iniciativa voltada para capacitação e fortalecimento de lideranças, alinhada às práticas de governança."
+            },
+            {
+                id: "esg-38",
+                nome: "Política Seleção que Desenvolve",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Diretrizes para recrutamento e desenvolvimento.",
+                detalhes: "Política que assegura processos seletivos justos e foco no desenvolvimento contínuo dos colaboradores."
+            },
+            {
+                id: "esg-39",
+                nome: "Fortalecer",
+                desafio: "ESG",
+                maturidade: "Consolidado",
+                descricao: "Programa para engajamento e evolução.",
+                detalhes: "Iniciativa que promove fortalecimento da cultura organizacional e desenvolvimento das equipes."
             },
 
             // --- Finanças Verdes ---
@@ -1983,6 +2279,7 @@
     </script>
 </body>
 </html>
+
 
 
 
