Práticas - Finanças Verdes

--- a/index.html
+++ b/index.html
@@ -2101,19 +2101,59 @@
             // --- Finanças Verdes ---
             {
                 id: "fin-01",
-                nome: "Crédito Solar Facilitado",
+                nome: "RENOVAGRO",
                 desafio: "Finanças Verdes",
                 maturidade: "Consolidado",
-                descricao: "Linha de financiamento com taxas reduzidas para energia fotovoltaica.",
-                detalhes: "Prazo estendido de até 120 meses e carência de 6 meses para instalação de sistemas de energia solar em residências e empresas."
+                descricao: "Linha de crédito para práticas sustentáveis no agro.",
+                detalhes: "Programa RENOVAGRO oferece financiamento para projetos que promovem sustentabilidade no setor agropecuário, incluindo energias renováveis e tecnologias verdes."
             },
             {
                 id: "fin-02",
-                nome: "CPR Verde",
+                nome: "INOVAGRO",
                 desafio: "Finanças Verdes",
-                maturidade: "MVP / Piloto",
-                descricao: "Título financeiro para produtores que preservam florestas nativas.",
-                detalhes: "Emissão de Cédula de Produto Rural Verde, remunerando o produtor rural pela manutenção de áreas de preservação acima do exigido por lei."
+                maturidade: "Consolidado",
+                descricao: "Crédito para inovação tecnológica no agronegócio.",
+                detalhes: "Linha INOVAGRO destinada a apoiar investimentos em inovação e modernização no campo, com foco em práticas sustentáveis e aumento de produtividade."
+            },
+            {
+                id: "fin-03",
+                nome: "PRONAF Bioeconomia",
+                desafio: "Finanças Verdes",
+                maturidade: "Consolidado",
+                descricao: "Financiamento para agricultura sustentável e bioeconomia.",
+                detalhes: "Programa PRONAF Bioeconomia oferece crédito para projetos voltados à agroecologia, produção sustentável e inclusão de mulheres no agronegócio."
+            },
+            {
+                id: "fin-04",
+                nome: "Mulher Manual RENOVAGRO",
+                desafio: "Finanças Verdes",
+                maturidade: "Consolidado",
+                descricao: "Material orientativo para inclusão feminina no agro.",
+                detalhes: "Manual RENOVAGRO voltado para mulheres, incentivando participação feminina em projetos sustentáveis e acesso a linhas de crédito verdes."
+            },
+            {
+                id: "fin-05",
+                nome: "BNDES Fundo Clima",
+                desafio: "Finanças Verdes",
+                maturidade: "Consolidado",
+                descricao: "Fundo para mitigação de mudanças climáticas.",
+                detalhes: "Linha de financiamento do BNDES destinada a projetos que reduzem emissões de gases de efeito estufa e promovem adaptação às mudanças climáticas."
+            },
+            {
+                id: "fin-06",
+                nome: "Pronaf Bioeconomia Agroecologia e Mulher",
+                desafio: "Finanças Verdes",
+                maturidade: "Consolidado",
+                descricao: "Crédito para práticas agroecológicas e inclusão feminina.",
+                detalhes: "Linha específica do PRONAF para fomentar agroecologia e garantir participação das mulheres em projetos sustentáveis."
+            },
+            {
+                id: "fin-07",
+                nome: "Fundo Clima",
+                desafio: "Finanças Verdes",
+                maturidade: "Consolidado",
+                descricao: "Financiamento para projetos ambientais.",
+                detalhes: "Fundo voltado para apoiar iniciativas que contribuem para redução de impactos ambientais e promoção da sustentabilidade."
             }
         ];
 
@@ -2279,6 +2319,7 @@
     </script>
 </body>
 </html>
+
 
 
 
