--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
                         </div>
                         <div id="capacidades-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
-                                <input type="text" placeholder="Buscar prática... " class="w-full md:w-1/2 p-2 pl-8 rounded border border-gray-300 focus:outline-none focus:border-[#3FA110] text-sm" onkeyup="filterProjects(this.value, 'Capacidades')">
+                                <input type="text" placeholder="Buscar prática... " class="w-full md:w-1/2 p-2 pl-8 rounded border border-gray-300 focus:outline-none focus:border-[#3FA110] text-sm" onkeyup="filterProjects(this.value, 'Desenvolvimento de Capacidades')">
                                 <svg class="w-4 h-4 text-gray-400 absolute left-2.5 top-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
                             </div>
                             <div class="projects-scroll-area overflow-y-auto max-h-[500px] pr-2">
-                                <div class="projects-container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" data-dimension="Capacidades"></div>
+                                <div class="projects-container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" data-dimension="Desenvolvimento de Capacidades"></div>
                             </div>
                         </div>
                         <div id="capacidades-forcas" class="inner-tab-content hidden animate-fade">
@@ -2300,6 +2300,7 @@
     </script>
 </body>
 </html>
+
 
 
 
