Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@
             document.getElementById('modal-title').textContent = project.nome;
             document.getElementById('modal-description').textContent = project.descricao;
             document.getElementById('modal-full-details').textContent = project.detalhes;
-            document.getElementById('modal-maturity').textContent = project.maturidade;
+            //document.getElementById('modal-maturity').textContent = project.maturidade;
             
             // Ajustar cor da badge no modal
             const badge = document.getElementById('modal-maturity');
@@ -2299,6 +2299,7 @@
     </script>
 </body>
 </html>
+
 
 
 
