--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
                 id: "part-01",
                 nome: "NPS (Relacional, Transacional, Competitiva e do Canal)",
                 desafio: "Participativa",
-                maturidade: "Consolidado",
+                //maturidade: "Consolidado",
                 descricao: "Avaliação da satisfação dos associados em diferentes interações.",
                 detalhes: "O Net Promoter Score é aplicado em múltiplas frentes (relacional, transacional, competitiva e por canal) para medir a experiência do associado, identificar pontos de melhoria e direcionar estratégias de relacionamento mais assertivas."
             },
@@ -2300,6 +2300,7 @@
     </script>
 </body>
 </html>
+
 
 
 
