--- a/index.html
+++ b/index.html
@@ -105,18 +105,63 @@
                         <button class="tab-btn px-4 py-3 font-medium text-sm" onclick="switchInnerTab('participativa', 'oportunidades')">Oportunidades</button>
                     </div>
                     <div class="p-6">
-                        <div id="participativa-oquee" class="inner-tab-content block">
-                            <h3 class="text-xl font-bold text-gray-800 mb-4">Definição</h3>
-                            <p class="text-gray-700">A Dimensão Participativa está diretamente vinculada ao princípio cooperativista da gestão democrática, pois envolve tanto o relacionamento com os cooperados quanto o processo de tomada de decisões. Essa abordagem exige que a cooperativa compreenda profundamente as necessidades e a dinâmica das comunidades locais, garantindo que os serviços oferecidos estejam alinhados às demandas reais dos associados.</p>
-                            <p class="text-gray-700 mt-4">A participação ativa da comunidade na criação de produtos e serviços gera valor concreto para a cooperativa de crédito, já que os benefícios são definidos pelos próprios cooperados. Nessa dimensão, a avaliação concentra-se em práticas que fortalecem o vínculo entre cooperativa e associados, como:</p>
-                            <ul class="list-disc list-inside text-gray-700 space-y-2 mt-4">
-                                <li>Escuta ativa e análise das necessidades;</li>
-                                <li>Uso de ferramentas para identificar demandas;.</li>
-                                <li>Adoção de canais de comunicação bidirecionais e inclusivos;</li>
-                                <li>Estratégias que apoiem a transição digital e promovam a inclusão de públicos mais jovens.</li>
-                            </ul>    
-                            <p class="text-gray-700 mt-4">O objetivo é assegurar que os cooperados se sintam parte das decisões e da construção do futuro da cooperativa, consolidando a gestão democrática como elemento central da inovação participativa.</p>
-                        </div>
+                        <div id="participativa-oquee" class="inner-tab-content block animate-fade">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 items-start">
+        
+        <div class="lg:col-span-2 space-y-6">
+            
+            <div class="flex items-center space-x-3 mb-2">
+                <div class="p-2 bg-green-100 rounded-lg text-[#3FA110]">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
+                </div>
+                <h3 class="text-2xl font-bold text-gray-800">Conceito e Definição</h3>
+            </div>
+
+            <p class="text-lg text-gray-600 leading-relaxed">
+                A <strong>Dimensão Participativa</strong> está diretamente vinculada ao princípio cooperativista da gestão democrática. Ela exige que a cooperativa compreenda profundamente as necessidades e a dinâmica das comunidades locais.
+            </p>
+
+            <p class="text-gray-600 leading-relaxed">
+                A participação ativa da comunidade na criação de produtos e serviços gera valor concreto, já que os benefícios são definidos pelos próprios cooperados. O foco é garantir que os serviços oferecidos estejam 100% alinhados às demandas reais.
+            </p>
+
+            <div class="bg-green-50 border-l-4 border-[#3FA110] p-5 rounded-r-lg shadow-sm">
+                <h4 class="text-[#3FA110] font-bold text-xs uppercase tracking-wider mb-2">Objetivo Principal</h4>
+                <p class="text-gray-800 font-medium italic">
+                    "Assegurar que os cooperados se sintam parte das decisões e da construção do futuro da cooperativa, consolidando a gestão democrática como elemento central."
+                </p>
+            </div>
+        </div>
+
+        <div class="lg:col-span-1">
+            <div class="bg-white border border-gray-200 rounded-xl shadow-sm p-6 sticky top-24">
+                <h4 class="font-bold text-gray-800 mb-4 border-b border-gray-100 pb-2 flex items-center">
+                    <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
+                    Práticas Avaliadas
+                </h4>
+                <ul class="space-y-3">
+                    <li class="flex items-start">
+                        <svg class="w-5 h-5 text-[#3FA110] mr-2 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                        <span class="text-sm text-gray-600">Escuta ativa e análise das necessidades.</span>
+                    </li>
+                    <li class="flex items-start">
+                        <svg class="w-5 h-5 text-[#3FA110] mr-2 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                        <span class="text-sm text-gray-600">Uso de ferramentas para identificar demandas.</span>
+                    </li>
+                    <li class="flex items-start">
+                        <svg class="w-5 h-5 text-[#3FA110] mr-2 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                        <span class="text-sm text-gray-600">Canais de comunicação bidirecionais e inclusivos.</span>
+                    </li>
+                    <li class="flex items-start">
+                        <svg class="w-5 h-5 text-[#3FA110] mr-2 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                        <span class="text-sm text-gray-600">Estratégias de transição digital e inclusão jovem.</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</div>
                         <div id="participativa-praticas" class="inner-tab-content hidden">
                             <div class="mb-4 relative">
                                 <input type="text" placeholder="Buscar prática... " class="w-full md:w-1/2 p-2 pl-8 rounded border border-gray-300 focus:outline-none focus:border-[#3FA110] text-sm" onkeyup="filterProjects(this.value, 'Participativa')">
@@ -860,3 +905,4 @@
     </script>
 </body>
 </html>
+
